syntax = "proto3";

option go_package = "github.com/allankerr/packraft/protos";

message LogEntry {
  uint64 term = 1;
  bytes command = 2;
}

message RequestVoteRequest {
  uint64  term = 1;
  uint32  candidate_id = 2;
  uint64 last_log_index = 3;
  uint64 last_log_term = 4;
}

message RequestVoteResponse {
  uint64 term = 1;
  bool vote_granted = 2;
}

message AppendEntriesRequest {
  uint64 term = 1;
  uint32 leader_id = 2;
  uint64 prev_log_index = 3;
  uint64 prev_log_term = 4;
  repeated LogEntry entries = 5;
  uint64 leader_commit = 6;
}

message AppendEntriesResponse {
  uint64 term = 1;
  bool success = 2;
  uint64 conflict_term = 3;
  uint64 conflict_index = 4;
}

service PackRaftService {
  rpc RequestVote(RequestVoteRequest) returns (RequestVoteResponse) {}
  rpc AppendEntries(AppendEntriesRequest) returns (AppendEntriesResponse) {}
}
